xorted out scrolling overflow issue on dropdown and a load of other small things. next step try sort out overfloe/height issue on smobile view country select nav

--- a/src/searchMap/css/resultsList.css
+++ b/src/searchMap/css/resultsList.css
@@ -1,7 +1,8 @@
 
 
 .results-list-yt6 {
-	position: sticky;
+	margin-top: 85px;
+	position: static;
 	top: var(--navigation-bar-offset,80px);
 	z-index: 1;
   background-color: #FFFFFF;
@@ -10,19 +11,33 @@ padding-inline-end: 24px;
 height: 60px;
 display: flex;
 align-items: center;
+justify-content: center;
 font-size: 16px;
 font-weight: 600;
 color: black;
 }
 
 .results-list-lq1 {
-margin-top: 85px;
+margin-top: 0px;
 margin-bottom: 32px;
 display: grid;
 grid-template-columns: repeat(1,minmax(0,1fr)) ;
 gap: 15px;
 min-height: 100vh
 }
+
+@media (min-width: 768px) {
+	.results-list-yt6 {
+		position: sticky;
+		justify-content: flex-start;
+		margin-top: 0px;
+	}
+	.results-list-lq1 {
+	margin-top: 85px;
+	}
+}
+
+
 
 @media (min-width: 550px) {
 	.results-list-lq1 {
