--- a/src/searchMap/css/searchMapNav.css
+++ b/src/searchMap/css/searchMapNav.css
@@ -2,6 +2,10 @@
 	box-sizing: border-box;
 }
 
+.search-map-nav-oe9 {
+	box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
+}
+
 .h1vnkd0i[class][class] {
 	position: -webkit-sticky;
 	position: fixed;
@@ -80,7 +84,7 @@ padding: 0px 24px;
 }
 
 .dir.c1kffd0v[class][class]::after {
-	box-shadow: rgb(0 0 0 / 8%) 0 1px 0;
+	/*  box-shadow: rgb(0 0 0 / 8%) 0 1px 0; */
 }
 
 .dir.cxy853f[class][class]::after {
@@ -257,9 +261,7 @@ padding: 0px 24px;
 	position: absolute;
 	top: 100%;
 	z-index: 1;
-	max-height: calc(100vh - 150px);
-	overflow-x: hidden;
-	overflow-y: auto;
+overflow-y: hidden;
 }
 
 .dir.c1nifi44 {
@@ -267,7 +269,7 @@ padding: 0px 24px;
 	border-radius: 32px;
 	box-shadow: 0 0 0 1px rgba(0,0,0,0.04),0 8px 16px rgba(0,0,0,0.15);
 	margin-top: 12px;
-	padding: 16px 32px;
+
 }
 
 .dir-ltr.l16t0m55 {
@@ -297,6 +299,15 @@ padding: 0px 24px;
 	stroke: currentcolor;
 	stroke-width: 4px;
 	overflow: visible;
+}
+
+.search-map-nav-ue3 {
+	height: calc(100vh - 150px);
+	max-height: 500px;
+overflow-x: hidden;
+overflow-y: auto;
+	padding: 16px 32px;
+overscroll-behavior-y: none;
 }
 
 /* search button */
